2007-10-19  Eric B. Weddington  <eweddington@cso.atmel.com>

	* configure.ac: Add new devices: AT90PWM2B, AT90PWM3B.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/io90pwm2b.h: New file.
	* include/avr/io90pwm3b.h: New file.
	* NEWS: Add devices to list.

2007-10-19  Eric B. Weddington  <eweddington@cso.atmel.com>

	Fix for Atmel bug #6346.
	* include/avr/iom8515.h: Add USART* interrupt vector names to
	correctly reflect the device XML file.

2007-10-10  Eric B. Weddington  <eweddington@cso.atmel.com>

	Resolve bug #21299: Duplicate register address in iotn48.h.
	* include/avr/iotn48.h: Fix PRR address.
	* NEWS: Update fixed bug list.

2007-10-08  Eric B. Weddington  <eweddington@cso.atmel.com>

	* include/avr/io90pwm216.h: Add fuse information.
	* include/avr/io90pwm316.h: Ditto.
	* include/avr/iotn43u.h: Ditto.

2007-10-08  Eric B. Weddington  <eweddington@cso.atmel.com>

	Add new device: ATtiny48.
	* configure.ac: Add new devices.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iotn48.h: New file.
	* NEWS: Update new devices list.

2007-10-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Resolve bug #21228: Missing 3rd clause in BSD license in
	documentation pages
	* doc/api/main_page.dox: Add clause #3.
	* doc/api/using-tools.dox: Add clause #3.

2007-10-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Unbreak the documentation build for recent versions of doxygen.
	NB: the latex package "urc" must be installed in order to
	successfully build the documentation.

	* doc/api/doxygen.config.in: Update for doxygen 1.5.x.  Most of