@@ -1,3 +1,10 @@
+2007-10-23 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	Submitted by Guohui Wang <info@Atmanecl.net>:
+	Fix for bug #20843: Mega 2561 library
+	* crt0/gcrt0.S: initialize EIND for avr6 architectures to
+	the same segment __vectors belongs to.
+
 2007-10-19  Eric B. Weddington  <eweddington@cso.atmel.com>
 
 	* configure.ac: Add new devices: AT90PWM2B, AT90PWM3B.
